--- a/package.json
+++ b/package.json
@@ -12,12 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cloudinary/react": "^1.11.2",
-    "@cloudinary/url-gen": "^1.13.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.19",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
