--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react-hook-form": "^7.50.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1"
   },
